Prevent code lines from wrapping.

--- a/generators/handlebars/template/public/kss.less
+++ b/generators/handlebars/template/public/kss.less
@@ -92,8 +92,8 @@
 
   pre {
     white-space: pre;
-    white-space: pre-wrap;
-    word-wrap:   break-word;
+    word-wrap: break-word;
+    overflow: scroll;
   }
 
   ins {
